# rpi-simple-video

./: CMakeLists.txt  LICENSE  encoder.hpp  file_output.hpp  h264_encoder.cpp  h264_encoder.hpp  main.cpp  simple_capture.cpp  simple_video.cpp  simple_video.hpp  stream_info.hpp
